--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.1.3
   fpdart: ^0.4.0
+  routemaster: ^1.0.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
